[tool.poetry]
name = "yr_to_pandas"
version = "0.1.0"
description = "Library to aid writing applications that interface with yr.no data api (https://api.met.no/weatherapi/) and the python library Pandas."
authors = ["obtitus"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.10.*"
appdirs = "^1.4.4"
pandas = "^1.4.3"
requests = "^2.28.1"
pytz = "^2022.1"
pyarrow = "^9.0.0"

[tool.poetry.dev-dependencies]
# Base tools
flake8 = "~4.0.1"
isort = "~5.12.0"
pre-commit = "~2.17.0"
# Flake8 plugins, see https://github.com/python-discord/code-jam-template/tree/main#plugin-list
flake8-docstrings = "~1.6.0"
Sphinx = "^5.1.1"
sphinx-rtd-theme = "^1.0.0"
sphinxcontrib-napoleon = "^0.7"
when-changed = {url = "https://github.com/joh/when-changed/archive/master.zip"}

[tool.poetry.extras]
docs = ["Sphinx", "sphinx-rtd-theme", "sphinxcontrib-napoleon"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
